--- a/project2/project2-frontend/.project
+++ b/project2/project2-frontend/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>project3-backend</name>
+	<name>project2-frontend</name>
 	<comment></comment>
 	<projects>
 	</projects>
