Commit for "Thread"

--- a/Prelims/src/OOps/.gitignore
+++ b/Prelims/src/OOps/.gitignore
@@ -13,3 +13,12 @@
 /Vehicles.class
 /subclass1.class
 /subclass2.class
+/Animal.class
+/Bike.class
+/Employee.class
+/Employer.class
+/SubTest.class
+/Test.class
+/Test1.class
+/Test2.class
+/TestConstructor.class
